tests/fail/wrong_decorator_signature.stderr
error[E0061]: this function takes 0 arguments but 1 argument was supplied
 --> tests/fail/wrong_decorator_signature.rs:8:12
  |
8 | #[decorate(bad_decorator)]
  |            ^^^^^^^^^^^^^ unexpected argument of type `{closure@$DIR/tests/fail/wrong_decorator_signature.rs:8:12: 8:25}`
  |
note: function defined here
 --> tests/fail/wrong_decorator_signature.rs:4:4
  |
4 | fn bad_decorator() -> i32 {
  |    ^^^^^^^^^^^^^
help: remove the extra argument
  |
8 - #[decorate(bad_decorator)]
8 + #[decorate(r)]
  |
